# Checkers

./: CMakeLists.txt  TODO.txt  main.cpp
header/: Board.hpp  BoardRowBuilder.hpp  Cell.hpp  Game.hpp  Piece.hpp  Player.hpp
header/factory/: GameFactory.hpp
header/interface/: IBoard.hpp  IBoardRowBuilder.hpp  ICell.hpp  IGame.hpp  IGameFactory.hpp  IPiece.hpp  IPlayer.hpp
src/: Board.cpp  BoardRowBuilder.cpp  Cell.cpp  Game.cpp  Piece.cpp  Player.cpp  main.cpp
src/factory/: GameFactory.cpp
